[gd_scene load_steps=9 format=2]

[ext_resource path="res://Inimigos/Inimigo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Inimigos/Feiticeiro_adepto/FeiticeiroAdepto.gd" type="Script" id=2]
[ext_resource path="res://Inimigos/Feiticeiro_adepto/Aprendiz de feiticeiro/5.png" type="Texture" id=3]
[ext_resource path="res://Inimigos/Feiticeiro_adepto/Aprendiz de feiticeiro/3.png" type="Texture" id=4]
[ext_resource path="res://Inimigos/Feiticeiro_adepto/Aprendiz de feiticeiro/2.png" type="Texture" id=5]
[ext_resource path="res://Inimigos/Feiticeiro_adepto/Aprendiz de feiticeiro/1.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "atirando",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "stunado",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "canalizando",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 4 )

[node name="FeiticeiroAdepto" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="StunTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
one_shot = true

[node name="AtaqueTimer" type="Timer" parent="." index="4"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CanalizacaoTimer" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="AtaqueTimer" to="." method="_on_AtaqueTimer_timeout"]
[connection signal="timeout" from="CanalizacaoTimer" to="." method="_on_CanalizacaoTimer_timeout"]
